# yace

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  README.rst  entities.rst  interface.rst  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: build_deploy.yml  pages.yml
auxi/: README.rst  bump.py  gen_entity_index.py
auxi/pkgs/: fedora.sh  python.sh
docs/: README.rst  requirements.txt
docs/source/: conf.py  features.rst  index.rst  installation.rst
docs/source/background/: index.rst
docs/source/codebase/: 900_make.cmd  cli.rst  compiler.rst  emitters.rst  errors.rst  index.rst  model.rst  parser.rst
docs/source/idl/: 100_linter.cmd  200_linter.uone.cmd  300_formater.cmd  400_generator.cmd  after.yaml  before.yaml  cparser.rst  csubset.rst  files.rst  formater.rst  generator.rst  index.rst  linter.rst  list.rst  model.rst
docs/source/idl/entities/: constants.rst  datatypes.rst  derivedtypes.rst  functiontypes.rst  index.rst
docs/source/install/: 000_install.cmd  000_install.out  100_help.out  index.rst  system.rst
docs/source/ir/: 400_cparser.cmd  csubset.rst  list.rst
docs/source/ir/entities/: constants.rst  datatypes.rst  derivedtypes.rst  index.rst
docs/source/model/: 000_layout.yaml  entities.rst  index.rst  interface.rst  linter.rst  model.rst  yaml.rst
docs/source/model/entities/: constants.rst  datatypes.rst  derivedtypes.rst  enumtypes.rst  functiontypes.rst  index.rst  literals.rst  macros.rst  structtypes.rst  uniontypes.rst
docs/source/targets/: capi.rst  cpp.rst  ctypes.rst  cython.rst  go.rst  index.rst  rust.rst  zig.rst
docs/source/targets/capi/: 200_yace.cmd  400_check.cmd  index.rst
docs/source/targets/ctypes/: index.rst
docs/source/targets/cython/: index.rst
docs/source/targets/zig/: index.rst
docs/source/todo/: index.rst
docs/source/tools/: index.rst
docs/source/tutorial/: index.rst  mechanics.rst  usage.rst
docs/source/usage/: 050_yace_help.cmd  100_example_nofmt.cmd  200_example.cmd  200_example.err  200_example.out  300_output.cmd  300_output.out  400_clang_format.cmd  example-yim.yaml  index.rst
docs/source/usage/output/: doxy.cfg  example_pp.c  libexample.h  libexample_pp.h  test.c
docs/src/: conf.py
docs/src/codebase/: 900_make.txt  transformations.rst
docs/src/install/: 000_install.cmd  100_help.cmd  index.rst
docs/src/ir/: cparser.rst  files.rst  index.rst  list.rst
docs/src/ir/entities/: functiontypes.rst
docs/src/targets/: index.rst
docs/src/targets/capi/: 200_yace.cmd  400_check.cmd  index.rst
docs/src/targets/cgo/: index.rst
docs/src/targets/ctypes/: index.rst
docs/src/usage/: 300_output.cmd  index.rst
docs/tooling/: pyproject.toml
docs/tooling/yace_docs/: __init__.py  yace_docs.py
etal/: README.rst  bump.py
etal/pkgs/: ubuntu.sh
example/model/nvme/: cmdset_kvs.yaml  cmdset_nvm.yaml  cmdset_zns.yaml  identify_cns.yaml  logs.yaml  opcodes.yaml  status_codes.yaml
example/model/xnvme/: core.yaml
example/templates/c/: bitfield.template  enum_str.template  hdr.template  pod.template
examples/libfoo/: meson.build
examples/libfoo/include/: foo.h
examples/libfoo/src/: foo.c
models/: example-invalid.yaml  example-mini.yaml  example.h  example.yaml  example_invalid.yaml  meta-example.yaml  meta-nvme.yaml  meta-xnvme.yaml  nvme.yaml  xnvme.yaml
models/example/: interface-model.yaml
models/nvme/: 000_globals.yaml  100_status_codes.yaml  200_logs.yaml  300_opcodes.yaml  400_identify_cns.yaml  500_command_sets.yaml  600_cmdset_nvm.yaml  700_cmdset_zns.yaml  800_cmdset_kvs.yaml  900_command_layout.yaml  cmdset_kvs.yaml  cmdset_nvm.yaml  command_layout.yaml  globals.yaml  opcodes.yaml  status_codes.yaml
models/xnvme/: core.yaml
src/yace/: __main__.py  cli.py  compiler.py  emitter.py  emitters.py  errors.py  linter.py  model.py  parser.py  tools.py  transformations.py
src/yace/cli/: yace.py
src/yace/emitters/: capi.py  emitter.py
src/yace/idl/: __init__.py  base.py  constants.py  cparser.py  datatypes.py  derivedtypes.py  directives.py  formater.py  functiontypes.py  generator.py  linter.py  model.py  structtypes.py  uniontypes.py
src/yace/ir/: base.py  constants.py  cparser.py  datatypes.py  derivedtypes.py  directives.py  functiontypes.py
src/yace/model/: __init__.py  base.py  constants.py  datatypes.py  entities.py  enumtypes.py  functiontypes.py  interface.py  linter.py  literals.py  macros.py  model.py  structtypes.py  uniontypes.py
src/yace/targets/: collector.py  target.py
src/yace/targets/capi/: capi_bundle_h.template  capi_check_c.template  capi_core_h.template  capi_pp_c.template  capi_pp_h.template  entity_bitfield_struct_decl.h.template  entity_define.h.template  entity_define.template  entity_enum.h.template  entity_enum.template  entity_fun.template  entity_function.h.template  entity_function_decl.h.template  entity_function_pointer_decl.h.template  entity_include_stmt.h.template  target.py  (+15 more)
templates/c/: api_pp_hdr.template  api_pp_src.template  api_test_src.template  bitfield.template  comment.template  define.template  enum.template  enum_str.template  field.template  pod.template  struct_enter.template  struct_exit.template
templates/ctypes/: bindings.template
tests/: compiler.py  emitter.py  fixed_width.h  sizes.c  test_compiler.py  test_tools.py
tests/parsing/: define.h  enum.h  example.h  foo.h  fun_main.h  fun_param_string.h  fun_ret_int_p1.h  fun_ret_ptr_struct.h  function_pointer.h  struct.h  struct_fw_signed.h  struct_fw_unsigned.h  struct_simple.h  test_c_to_y.py  test_parser.py
tests/parsing/unsupported/: fun_ret_struct.h  test_parser.py
toolbox/: README.rst  bump.py  gen_entity_index.py
toolbox/pkgs/: macos.sh  python.sh  ubuntu.sh
(+27 files in other folders)
