[bdist_wheel]
universal = 1

[metadata]
name = yace
version = attr: yace.__version__
author = Simon A. F. Lund
author_email = os@safl.dk
maintainer = Simon A. F. Lund
maintainer_email = os@safl.dk
description = Yet Another Code Emitter / Your Artisinal Code Emitter / yace
long_description = file: README.rst
long_description_content_type = text/x-rst
license = GPL-2.0
url = https://github.com/safl/yace

classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Framework :: Pytest
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  License :: OSI Approved :: GNU General Public License v2 (GPLv2)
  Programming Language :: Python
  Topic :: Software Development :: Testing
  Topic :: Software Development
  Topic :: Text Processing
  Topic :: Utilities

[options]
requires_python = >=3.7
setup_requires =
  wheel
install_requires =
  jinja2
  pyyaml
  libclang~=14.0.1
  setuptools>=60

zip_safe = False
packages = find_namespace:
package_dir =
  = src

[options.packages.find]
where = src

[options.package_data]
* = *.clang-format, *.template

[options.entry_points]
console_scripts =
  yace = yace.cli.yace:main
